# fastapi-sample

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  sample.env  sql.sh
api/: Dockerfile  Pipfile
api/controller/: controller.py
src/: Dockerfile  Pipfile  main.py
src/controller/: main.py
src/model/entity/: chat.entity.py
src/service/: learner.py
