[tool.poetry]
name = "mlserver"
version = "0.1.0"
description = ""
authors = ["Oka Kyohei"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.2"
fastapi = "^0.65.2"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
black = "^21.4b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
